[gd_scene load_steps=27 format=2]

[ext_resource path="res://Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Thin.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Condensed.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Images/Back.png" type="Texture" id=5]
[ext_resource path="res://Images/Background.png" type="Texture" id=6]
[ext_resource path="res://TutorialTileMapHolder.gd" type="Script" id=7]
[ext_resource path="res://background.tres" type="TileSet" id=8]
[ext_resource path="res://Hand.gd" type="Script" id=9]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-MediumItalic.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Images/Fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Camera2D.gd" type="Script" id=12]
[ext_resource path="res://Images/MenuIcon.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 120
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0.827451, 0.827451, 0.827451, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Score:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.27451, 0.27451, 0.27451, 1 ), Color( 0.631373, 0.631373, 0.631373, 1 ), Color( 0.27451, 0.27451, 0.27451, 1 ) ]
}

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Images/Fonts/Roboto/Roboto-Thin.ttf"

[sub_resource type="DynamicFont" id=7]
size = 40
outline_color = Color( 0.611765, 0.611765, 0.611765, 1 )
font_data = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 35
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=11]
resource_name = "Fade in"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Centre/Container/Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Header/TutorialLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 500 ), Vector2( 281.823, 504.544 ), Vector2( 329.537, 431.838 ), Vector2( 300, 500 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=13]
size = 50
font_data = ExtResource( 2 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Header" type="Control" parent="Control"]
anchor_right = 1.0
margin_bottom = 200.0
rect_min_size = Vector2( 600, 200 )
mouse_filter = 1
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Score" type="Label" parent="Control/Header"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -40.0
margin_right = 187.0
margin_bottom = 137.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.27451, 0.27451, 0.27451, 1 )
text = "0"
align = 1
valign = 1

[node name="SubScore" type="Label" parent="Control/Header"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = 95.2632
margin_right = 54.0
margin_bottom = 131.263
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.476563, 0.476563, 0.476563, 1 )
text = "0"
align = 1
valign = 1

[node name="HighScoreLabel" type="Label" parent="Control/Header"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 126.0
margin_top = 90.2631
margin_right = 275.0
margin_bottom = 150.263
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.464844, 0.464844, 0.464844, 1 )
text = "0"
align = 1

[node name="HighScore" type="Label" parent="Control/Header"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -164.438
margin_top = 58.7211
margin_right = -33.4376
margin_bottom = 106.721
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.611765, 0.611765, 0.611765, 1 )
text = "Highscore"

[node name="ScoreAnimationPlayer" type="AnimationPlayer" parent="Control/Header"]
anims/Score = SubResource( 5 )

[node name="Reset" type="Button" parent="Control/Header"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 26.9735
margin_top = 68.227
margin_right = 168.973
margin_bottom = 126.227

[node name="Label" type="Label" parent="Control/Header/Reset"]
visible = false
margin_left = 17.76
margin_top = 1.0
margin_right = 167.76
margin_bottom = 100.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.611765, 0.611765, 0.611765, 1 )
text = "Reset
"

[node name="Reset_!" type="Button" parent="Control/Header"]
visible = false
margin_right = 150.0
margin_bottom = 60.0001
action_mode = 0

[node name="TutorialLabel" type="Label" parent="Control/Header"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -29.0
margin_right = 299.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.352941, 0.247059, 0.356863, 1 )
text = "Place a tile onto the board "
align = 1
valign = 1
autowrap = true

[node name="Tween" type="Tween" parent="Control/Header/TutorialLabel"]

[node name="Centre" type="Container" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -201.0
margin_bottom = 349.0
rect_min_size = Vector2( 600, 550 )
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Sprite" type="Sprite" parent="Control/Centre"]
modulate = Color( 1, 0.956863, 0.882353, 1 )
position = Vector2( 295.524, 217.175 )
scale = Vector2( 4.17368, 4.17368 )
texture = ExtResource( 5 )

[node name="Container2" type="Container" parent="Control/Centre"]

[node name="Container" type="Container" parent="Control/Centre"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 82.0
margin_bottom = 82.0
mouse_filter = 2

[node name="Back" type="Sprite" parent="Control/Centre/Container"]
visible = false
modulate = Color( 0.265625, 0.265625, 0.265625, 1 )
position = Vector2( 74.5735, -266.966 )
scale = Vector2( 2.94728, 2.20277 )
texture = ExtResource( 5 )

[node name="Background" type="Sprite" parent="Control/Centre/Container"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -260.201, -399.976 )
scale = Vector2( 0.591, 0.591 )
texture = ExtResource( 6 )
offset = Vector2( 440.666, 447.574 )

[node name="TileMapHolder" type="Node2D" parent="Control/Centre/Container"]
position = Vector2( -264.195, -400 )
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="Control/Centre/Container/TileMapHolder"]
position = Vector2( 4, 0 )
tile_set = ExtResource( 8 )
cell_size = Vector2( 130, 130 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0 )

[node name="NodeHolder" type="Node2D" parent="Control/Centre/Container"]
position = Vector2( -300, -656 )

[node name="Bottom" type="Container" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -199.0
margin_bottom = 1.0
rect_min_size = Vector2( 600, 200 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="Container" parent="Control/Bottom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -29.5
margin_bottom = -29.5
mouse_filter = 2

[node name="Hand" type="Node2D" parent="Control/Bottom/Container"]
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="Control/Bottom/Container/Hand"]

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CheckTimerFlash" type="Timer" parent="."]
wait_time = 0.04
one_shot = true

[node name="GameOver" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.281765 )

[node name="GameOver" type="Label" parent="GameOver"]
margin_left = 50.0
margin_top = 288.0
margin_right = 541.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.933594, 0.622329, 0.514206, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
text = "Game Over"

[node name="GameReset" type="Button" parent="GameOver/GameOver"]
margin_left = 164.0
margin_top = 128.0
margin_right = 328.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 10 )
text = "Reset"

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
script = ExtResource( 12 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Fade in" = SubResource( 11 )
anims/Shake = SubResource( 12 )

[node name="MenuButton" type="TextureButton" parent="."]
visible = false
modulate = Color( 1, 0.960784, 0.898039, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.8341
margin_top = 10.7709
margin_right = 59.1659
margin_bottom = 60.7709
texture_normal = ExtResource( 13 )

[node name="Label" type="Label" parent="MenuButton"]
visible = false
margin_left = -6.4707
margin_top = -9.19517
margin_right = 118.529
margin_bottom = 50.8048
custom_fonts/font = SubResource( 13 )
text = "Menu"

[node name="TextTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="TextPause" type="Timer" parent="."]
wait_time = 0.4
[connection signal="target_node_failed" from="." to="." method="_on_Main_target_node_failed"]
[connection signal="pressed" from="Control/Header/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Control/Header/Reset_!" to="." method="_on_Reset_pressed"]
[connection signal="timeout" from="CheckTimer" to="." method="_on_CheckTimer_timeout"]
[connection signal="timeout" from="CheckTimerFlash" to="." method="_on_CheckTimerFlash_timeout"]
[connection signal="pressed" from="GameOver/GameOver/GameReset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
